--- a/src/main/resources/templates/menu-persona.html
+++ b/src/main/resources/templates/menu-persona.html
@@ -5,17 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menú de Personas</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" th:href="@{/css/styles.css}">
     <link rel="stylesheet" th:href="@{/css/menu-styles.css}">
 </head>
 <body>
-<div class="form-container menu-container">
-    <h1>MENÚ PERSONAS</h1>
-    <div class="menu-options">
-        <a th:href="@{/formulario}" class="submit-btn menu-btn btn-agregar">Agregar Persona</a>
-        <a href="#" class="submit-btn menu-btn btn-eliminar">Eliminar Persona</a>
-        <a href="#" class="submit-btn menu-btn btn-buscar">Buscar Persona</a>
-        <a th:href="@{/listar-personas}" class="submit-btn menu-btn btn-listar">Listar Personas</a>
+<div class="page-wrapper">
+    <div class="form-container menu-container">
+        <h1>MENÚ GESTIÓN</h1>
+        <div class="menu-options">
+            <a th:href="@{/formulario}" class="menu-btn btn-agregar">
+                <i class="fas fa-user-plus"></i> Agregar Persona
+            </a>
+            <a th:href="@{/listar-personas}" class="menu-btn btn-listar">
+                <i class="fas fa-users"></i> Listar Personas
+            </a>
+        </div>
+    </div>
+    <div class="global-footer">
+        <p>Guía 3 | Tomás Valero | Ignacio Nizetich</p>
     </div>
 </div>
 </body>
