--- a/src/main/resources/templates/error-404.html
+++ b/src/main/resources/templates/error-404.html
@@ -15,14 +15,17 @@
         <h1 class="error-title">¡Ups! Página no encontrada</h1>
         <p class="error-message">El recurso que buscas no existe o ha sido movido.</p>
         <div class="error-actions">
-            <a th:href="@{/menu}" class="error-btn">
-                ← Volver al Menú Principal
-            </a>
             <a th:href="@{/}" class="error-btn secondary">
                 Ir a la Página de Inicio
             </a>
         </div>
     </div>
+</div>
+<div class="global-footer">
+    <p>Guía 3 JDBC |
+        <a href="https://github.com/ValeroTomas " target="_blank" class="autor-link">Tomás Valero</a> |
+        <a href="https://github.com/INizetich" target="_blank" class="autor-link">Ignacio Nizetich</a>
+    </p>
 </div>
 </body>
 </html>
