--- a/src/main/resources/templates/formulario-persona.html
+++ b/src/main/resources/templates/formulario-persona.html
@@ -60,6 +60,13 @@
     </form>
 </div>
 
+<div class="global-footer">
+    <p>Guía 3 JDBC |
+        <a href="https://github.com/ValeroTomas " target="_blank" class="autor-link">Tomás Valero</a> |
+        <a href="https://github.com/INizetich" target="_blank" class="autor-link">Ignacio Nizetich</a>
+    </p>
+</div>
+
 <script th:inline="javascript">
     document.addEventListener('DOMContentLoaded', function () {
         const form = document.getElementById('personaForm');
