--- a/src/main/resources/templates/menu-persona.html
+++ b/src/main/resources/templates/menu-persona.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" th:href="@{/css/menu-styles.css}">
 </head>
 <body>
-<div class="page-wrapper">
-    <div class="form-container menu-container">
+<div>
+    <div class="form-container">
         <h1>MENÚ GESTIÓN</h1>
         <div class="menu-options">
             <a th:href="@{/formulario}" class="menu-btn btn-agregar">
@@ -23,7 +23,10 @@
         </div>
     </div>
     <div class="global-footer">
-        <p>Guía 3 | Tomás Valero | Ignacio Nizetich</p>
+        <p>Guía 3 JDBC |
+            <a href="https://github.com/ValeroTomas " target="_blank" class="autor-link">Tomás Valero</a> |
+            <a href="https://github.com/INizetich" target="_blank" class="autor-link">Ignacio Nizetich</a>
+        </p>
     </div>
 </div>
 </body>
