--- a/src/main/resources/templates/listar-personas.html
+++ b/src/main/resources/templates/listar-personas.html
@@ -91,6 +91,13 @@
     </div>
 </div>
 
+<div class="global-footer">
+    <p>Guía 3 JDBC |
+        <a href="https://github.com/ValeroTomas " target="_blank" class="autor-link">Tomás Valero</a> |
+        <a href="https://github.com/INizetich" target="_blank" class="autor-link">Ignacio Nizetich</a>
+    </p>
+</div>
+
 <script th:src="@{/js/listar-personas.js}"></script>
 </body>
 </html>
